[project]
name = "dbapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0", # For async API testing
    "aiosqlite>=0.19.0", # For in-memory SQLite async
    "pytest-asyncio>=0.21.0", # To properly run asyncio tests with pytest
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
